# autonomous-researcher

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  GitCommitPractices.md  INTERVIEW_QA.md  LICENSE  MODEL_CONFIG.md  QUICKSTART.md  README.md  SYSTEM_FLOW_AND_TECH.md  app.py  config.py  docker-compose.yml  health_api.py  main.py  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  question.md
.github/workflows/: ci.yml  codeql.yml
agent/: __init__.py  graph.py  logger.py  metrics.py  monitoring.py  rag.py  state.py  tools.py  validation.py
docs/: README.md  conf.py  examples.rst  index.rst  installation.rst  quickstart.rst
docs/_static/: custom.css
docs/api/: agent.rst  config.rst  modules.rst
tests/: conftest.py  test_app.py  test_config.py  test_graph.py  test_integration.py  test_logger.py  test_main.py  test_rag.py  test_state.py  test_tools.py  test_validation.py
