[project]
name = "autonomous-research-assistant"
version = "0.1.0"
description = "Event-driven AI research agent with LangGraph, LangChain, and RAG capabilities"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-groq>=0.2.0",
    "langchain-community>=0.3.0",
    "langchain-text-splitters>=0.3.0",
    "chromadb>=0.5.0",
    "sentence-transformers>=2.2.0",
    "tavily-python>=0.5.0",
    "arxiv>=2.1.0",
    "beautifulsoup4>=4.12.0",
    "playwright>=1.40.0",
    "pypdf2>=3.0.0",
    "pdfplumber>=0.11.0",
    "streamlit>=1.28.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "tiktoken>=0.5.0",
]
