[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["agent"]

[tool.setuptools.package-data]
"*" = ["*.txt", "*.md"]

[project]
name = "autonomous-research-assistant"
version = "0.1.0"
description = "Event-driven AI research agent with LangGraph, LangChain, and RAG capabilities"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langgraph~=0.2.0",
    "langchain~=0.3.0",
    "langchain-groq~=0.2.0",
    "langchain-community~=0.3.0",
    "langchain-text-splitters~=0.3.0",
    "chromadb~=0.5.0",
    "sentence-transformers>=2.7.0",
    "tavily-python~=0.5.0",
    "arxiv~=2.1.0",
    "beautifulsoup4~=4.12.0",
    "playwright~=1.40.0",
    "pypdf2~=3.0.0",
    "pdfplumber~=0.11.0",
    "streamlit~=1.28.0",
    "python-dotenv~=1.0.0",
    "requests~=2.31.0",
    "tiktoken~=0.5.0",
    "fastapi~=0.121.1",
    "uvicorn~=0.24.0",
    "psutil~=5.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest~=8.0.0",
    "pytest-cov~=4.1.0",
    "black~=24.0.0",
    "isort~=5.13.0",
    "ruff~=0.5.0",
    "mypy~=1.8.0",
    "types-requests~=2.31.0",
    "types-beautifulsoup4~=4.12.0",
    "pre-commit~=3.5.0",
    "sphinx~=7.0.0",
    "sphinx-rtd-theme~=2.0.0",
    "bandit~=1.7.0",
    "safety~=3.0.0",
]

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
  | chroma_db
  | __pycache__
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = ["chroma_db/**", "*.egg-info/**", "__pycache__/**"]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "chroma_db",
    "*.egg-info",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true
# Only ignore missing imports for third-party libraries without type stubs
# (handled in overrides section below)

[[tool.mypy.overrides]]
module = [
    "chromadb.*",
    "langchain.*",
    "langchain_community.*",
    "langchain_groq.*",
    "langchain_text_splitters.*",
    "langgraph.*",
    "sentence_transformers.*",
    "tavily.*",
    "arxiv.*",
    "streamlit.*",
    "playwright.*",
    "pdfplumber.*",
    "PyPDF2.*",
]
ignore_missing_imports = true

[tool.coverage.run]
source = ["agent"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/chroma_db/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
precision = 2
show_missing = true
skip_covered = false
# Enforce minimum coverage threshold
# Set to 80% as a reasonable starting point
# Adjust based on project needs
fail_under = 80.0

[tool.bandit]
exclude_dirs = ["tests", "chroma_db", "__pycache__", ".venv", "venv", "build", "dist"]
skips = ["B101"]  # Skip assert_used test (common in tests)
